--- a/css/styles.css
+++ b/css/styles.css
@@ -125,3 +125,58 @@ div.nos {
   column-gap: 0.5rem;
 
 }
+
+#nosotros {
+    background-color: #f5f5f5;
+    padding: 80px 0;
+  }
+
+  .section-title {
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 40px;
+    position: relative;
+  }
+
+  .main-title {
+  font-size: 48px;
+  color: #8e73e8;
+  text-align: center;
+  animation: pulse 1s ease-in-out infinite;
+  }
+
+  .team {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+  }
+
+  .team-member {
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    margin-bottom: 40px;
+    width: 300px;
+  }
+
+  .team-member img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
+  }
+
+  .team-member h4 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+
+  .team-member p {
+    font-size: 18px;
+    color: gray;
+    margin-bottom: 0;
+  }
