--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@
   padding-left: 80px;
 }
 
+a:link{
+  color: rgb(13, 2, 119);
+}
+a:visited{
+  color: rgb(78, 8, 118);
+}
 .boleta {
   text-align: right;
   padding-left: 680px;
@@ -75,16 +81,11 @@ div.nos {
 }
 .main-article {
   margin-top: 2rem;
-  /*margin-bottom: 8rem;*/
-  /*padding-bottom: 2rem;*/
-  /*border-top: 1px solid lightslategray;
-  
-  border-bottom: 1px solid lightslategray;
-*/
+
 }
 
 #Contacto {
-  background-image: url("../assets/Camino1.jpg");
+  background-image: url("../assets/slide1.jpeg");
   background-size: cover;
   height: 750px;
   display: flex;
@@ -93,7 +94,7 @@ div.nos {
 }
 
 #Reclamos {
-  background-image: url("../assets/Camino1.jpg");
+  background-image: url("../assets/slide3sm.jpg");
   background-size: cover;
   height: 750px;
   display: flex;
@@ -102,7 +103,8 @@ div.nos {
 }
 
 #Reclamos form {
-  background: linear-gradient(140deg, rgba(150, 204, 211, 0.6) 10%, rgba(179, 210, 214, 0.6) 45%, rgba(202, 213, 215, 0.6) 100%);
+  background: linear-gradient(140deg, rgba(150, 204, 211, 0.7) 10%, rgba(179, 210, 214, 0.7) 45%, rgba(202, 213, 215, 0.7) 100%);
+  font-weight:500;
   padding: 2rem;
   box-shadow: 6px 6px 10px;
   border-radius: 2%;
@@ -114,6 +116,7 @@ div.nos {
 
 #Contacto form {
   background: linear-gradient(140deg, rgb(150, 204, 211, 0.6) 10%, rgb(179, 210, 214, 0.6) 45%, rgb(202, 213, 215, 0.6) 100%);
+  font-weight:500;
   padding: 2rem;
   box-shadow: 6px 6px 10px;
   border-radius: 2%;
